--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t mksmanjit/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run mksmanjit/docker-react npm run test -- --coverage
+  - docker run -e CI=true mksmanjit/docker-react npm run test
